--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1> Hello World! </h1>
+<head>
+  <title> Ahren Alexander </title>
+  <!-- Bootstrap Core CSS -->
+  <link href= "css/bootstrap.css" rel = "stylesheet">
+  <!-- Custom CSS -->
+  <link href= "css/agency.css" rel = "stylesheet">
+</head>
+<body id = "page-top" class = "index">
+  <nav class = "navbar navbar-default navbar-fixed-top">
+    ::before
+    <div class = "container">_</div>
+    ::after
+
+
+
+
+  <h1> Hello World! </h1>
 <p> posting posting </p>
 </body>
 </hmtl>
