--- a/index.html
+++ b/index.html
@@ -2,16 +2,8 @@
 <html>
 <head>
   <title> Ahren Alexander </title>
-  <!-- Bootstrap Core CSS -->
-  <link href= "css/bootstrap.css" rel = "stylesheet">
-  <!-- Custom CSS -->
-  <link href= "css/agency.css" rel = "stylesheet">
 </head>
-<body id = "page-top" class = "index">
-  <nav class = "navbar navbar-default navbar-fixed-top">
-    ::before
-    <div class = "container">_</div>
-    ::after
+<body>
 
 
 
