--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html>
 <head>
   <title> Ahren Alexander </title>
+  <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
+  <div class = "topbar">
+    Hello
+  </div>
 
-<img src = "images\arctic.jpg">
+<img src = "images\arctic.jpg" style = "height:20%; width: 100%">
 
 
   <h1> Hello World! </h1>
