--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
   <link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body>
-  <div class = "topbar">
+  <div style = "background-color:black">
     Hello
   </div>
-
-<img src = "images\arctic.jpg" style = "height:20%; width: 100%">
-
 
   <h1> Hello World! </h1>
 <p> posting posting </p>
