--- a/index.html
+++ b/index.html
@@ -1,15 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title> Ahren Alexander </title>
-  <link rel="stylesheet" type="text/css" href="css.css">
+  <meta name = "viewport" content = "width=device-width. intitial-scale=1.0">
+  <link rel = "stylesheet" href ="bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="custom_css.css">
+
 </head>
 <body>
-  <div style = "background-color:black">
-    Hello
-  </div>
+  <nav class = "vbar navbar-inverse">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand"><img src = "images\ashadow.jpg" style = "width: 20px; height: 28px;" class = "img-circle"></a>
+      </div>
 
-  <h1> Hello World! </h1>
-<p> posting posting </p>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="https://www.linkedin.com/pub/ahren-alexander/65/766/737/en">LinkedIn <span class="sr-only">(current)</span></a></li>
+          <li><a href="#">Link 2</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+              <li class="divider"></li>
+              <li><a href="#">One more separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+        <form class="navbar-form navbar-left" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Link</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
+
+  <!-- MY CONTENT-->
+  <div id = "navbar">
+    AHREN ALEXANDER  </div>
+  <div id = "bluebar"> </div>
+
+  <p class = "huge" style = "letter-spacing: -1px; color: grey;"> "Eventually, Everything Connects"</p>
+  <p style = "font-style: italic;"> - Charles Eames </p>
+  <hr>
+  <br>
+  <div class = "container">
+    <div class = "row">
+      <div class = "col-sm-6">
+        <img src = 'images\vert.png' class = "img-circle" style = "height:16em; width:16em;">
+        <h1> VERT II AUDIO </h1>
+        <p class = "bold"> Director   and   Founder </p>
+        <p> VERT || AUDIO is me actively pursuing my dreams.  VERT is an audio manufacturing company that specializes in producing low-profile speakers, also serving as a platform for independent artists to display their work. </p>
+      </div>
+
+        <div class = "col-sm-6">
+          <img src = 'images\frd.png' class = "img-circle" style = "height:16em; width:16em;">
+          <h1> FOR REAL DOUGH </h1>
+          <p class = "bold"> Head   of   Analytics   and   Design </p>
+          <p> For Real Dough specializes in eggless cookie dough that comes in a variety of exciting flavors.  I provide graphic design and marketing services. </p>
+        </div>
+    </div> <!-- ROW -->
+
+    <div class = row>
+      <div class = "col-sm-12">
+        <img src = 'images\nu.png' class = "img-circle" style = "height:16em; width:16em;">
+        <h1> Northwestern University '16 </h1>
+        <p class = "bold"> Manufacturing and Design Engineering </p>
+        <p> Music Technology + Farley Center Certificate for Entrepreneurship</p>
+      </div>
+    </div> <!-- ROW -->
+    <hr>
+    <div class = "row">
+      <div class = "col-lg-12">
+          <h1 style = "text-align:center; padding: .5em;"> Projects </h1>
+        </div>
+    </div> <!-- ROW -->
+
+    <div class = "row">
+      <div class = "col-sm-1 borders">
+        <img src = "images\Red Concept Rendering.jpg" style = "width: 100%; height: 100%;">
+      </div>
+      <div class = "col-sm-11">
+        <h1 style = "margin-left:auto"> Speaker Projects </h1>
+      </div>
+    </div> <!-- ROW -->
+</div>
+
+  <h1>  Hi Life </h1>
+
+<script src = "jquery-2.1.3.min.js"></script>
+<script src = "bootstrap/js/bootstrap.min.js"></script>
 </body>
+
 </hmtl>
