--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div id = "bluebar"> </div>
 
   <p class = "huge" style = "letter-spacing: -1px; color: grey;"> "Eventually, Everything Connects"</p>
-  <p style = "font-style: italic;"> - Charles Eames </p>
+  <p style = "font-style: italic; text-align:center;"> - Charles Eames </p>
   <hr>
   <br>
   <div class = "container">
@@ -103,7 +103,7 @@
           <h1 style = "text-align:center; padding: .5em;"> Projects </h1>
         </div>
     </div> <!-- ROW -->
-
+<!--
     <div class = "row">
       <div class = "col-sm-1 borders">
         <img src = "images\Red Concept Rendering.jpg" style = "width: 100%; height: 100%;">
@@ -111,11 +111,11 @@
       <div class = "col-sm-11">
         <h1 style = "margin-left:auto"> Speaker Projects </h1>
       </div>
-    </div> <!-- ROW -->
+    </div>
 </div>
 
   <h1>  Hi Life </h1>
-
+-->
 <script src = "jquery-2.1.3.min.js"></script>
 <script src = "bootstrap/js/bootstrap.min.js"></script>
 </body>
