--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="https://www.linkedin.com/pub/ahren-alexander/65/766/737/en">LinkedIn <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Link 2</a></li>
+          <li><a href="#">Resume</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -78,7 +78,7 @@
         <img src = 'images\vert.png' class = "img-circle" style = "height:16em; width:16em;">
         <h1> VERT II AUDIO </h1>
         <p class = "bold"> Director   and   Founder </p>
-        <p> VERT || AUDIO is me actively pursuing my dreams.  VERT is an audio manufacturing company that specializes in producing low-profile speakers, also serving as a platform for independent artists to display their work. </p>
+        <p class = "serif"> VERT || AUDIO is me actively pursuing my dreams.  VERT is an audio manufacturing company that specializes in producing low-profile speakers, also serving as a platform for independent artists to display their work. </p>
       </div>
 
         <div class = "col-sm-6">
@@ -103,7 +103,7 @@
           <h1 style = "text-align:center; padding: .5em;"> Projects </h1>
         </div>
     </div> <!-- ROW -->
-<!--
+
     <div class = "row">
       <div class = "col-sm-1 borders">
         <img src = "images\Red Concept Rendering.jpg" style = "width: 100%; height: 100%;">
