Trying to Get Web Page to Update...

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <div id = "bluebar"> </div>
 
   <p class = "huge" style = "letter-spacing: -1px; color: grey;"> "Eventually, Everything Connects"</p>
-  <p style = "font-style: italic; text-align:center;"> - Charles Eames </p>
+  <p style = "font-style: italic; text-align:center;"> - lol Charles Eames </p>
   <hr>
   <br>
   <div class = "container">
@@ -106,13 +106,21 @@
 
     <div class = "row">
       <div class = "col-sm-1 borders">
+        <img src = "images\hilife.png" style = "width: 100%; height: 100%;">
+      </div>
+      <div class = "col-sm-11">
+        <h1 style = "margin-left:auto" class = "bold"> Hi Life </h1>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "col-sm-1 borders">
         <img src = "images\Red Concept Rendering.jpg" style = "width: 100%; height: 100%;">
       </div>
       <div class = "col-sm-11">
-        <h1 style = "margin-left:auto"> Speaker Projects </h1>
+        <h1 style = "margin-left:auto" class = "bold"> Speaker Projects </h1>
       </div>
     </div>
-</div>
+  </div>
 
   <h1>  Hi Life </h1>
 -->
