--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
       <div class = "col-sm-6">
         <img src = 'images\vert.png' class = "img-circle" style = "height:16em; width:16em;">
         <h1> VERT II AUDIO </h1>
-        <p class = "bold"> Director   and   Founder </p>
-        <p class = "serif"> VERT || AUDIO is me actively pursuing my dreams.  VERT is an audio manufacturing company that specializes in producing low-profile speakers, also serving as a platform for independent artists to display their work. </p>
+        <p class = "bold center"> Director   and   Founder </p>
+        <p class = "serif center"> VERT || AUDIO is me actively pursuing my dreams.  VERT is an audio manufacturing company that specializes in producing low-profile speakers, also serving as a platform for independent artists to display their work. </p>
       </div>
 
         <div class = "col-sm-6">
           <img src = 'images\frd.png' class = "img-circle" style = "height:16em; width:16em;">
           <h1> FOR REAL DOUGH </h1>
-          <p class = "bold"> Head   of   Analytics   and   Design </p>
-          <p> For Real Dough specializes in eggless cookie dough that comes in a variety of exciting flavors.  I provide graphic design and marketing services. </p>
+          <p class = "bold center"> Head   of   Analytics   and   Design </p>
+          <p class = "serif center"> For Real Dough specializes in eggless cookie dough that comes in a variety of exciting flavors.  I provide graphic design and marketing services. </p>
         </div>
     </div> <!-- ROW -->
 
