Added more Rows

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
   <div class = "container">
     <div class = "row">
       <div class = "col-sm-6">
-        <img src = 'images\vert.png' class = "img-circle" style = "height:16em; width:16em;">
+        <img src = 'images\vert.png' class = "img-circle center" style = "height:16em; width:16em;">
         <h1> VERT II AUDIO </h1>
         <p class = "bold center"> Director   and   Founder </p>
         <p class = "serif center"> VERT || AUDIO is me actively pursuing my dreams.  VERT is an audio manufacturing company that specializes in producing low-profile speakers, also serving as a platform for independent artists to display their work. </p>
       </div>
 
         <div class = "col-sm-6">
-          <img src = 'images\frd.png' class = "img-circle" style = "height:16em; width:16em;">
+          <img src = 'images\frd.png' class = "img-circle center" style = "height:16em; width:16em;">
           <h1> FOR REAL DOUGH </h1>
           <p class = "bold center"> Head   of   Analytics   and   Design </p>
           <p class = "serif center"> For Real Dough specializes in eggless cookie dough that comes in a variety of exciting flavors.  I provide graphic design and marketing services. </p>
@@ -91,10 +91,10 @@
 
     <div class = row>
       <div class = "col-sm-12">
-        <img src = 'images\nu.png' class = "img-circle" style = "height:16em; width:16em;">
+        <img src = 'images\nu.png' class = "img-circle center" style = "height:16em; width:16em;">
         <h1> Northwestern University '16 </h1>
-        <p class = "bold"> Manufacturing and Design Engineering </p>
-        <p> Music Technology + Farley Center Certificate for Entrepreneurship</p>
+        <p class = "bold center"> Manufacturing and Design Engineering </p>
+        <p class = "serif center"> Music Technology + Farley Center Certificate for Entrepreneurship</p>
       </div>
     </div> <!-- ROW -->
     <hr>
@@ -105,24 +105,38 @@
     </div> <!-- ROW -->
 
     <div class = "row">
-      <div class = "col-sm-1 borders">
-        <img src = "images\hilife.png" style = "width: 100%; height: 100%;">
+      <div class = "col-sm-1">
+        <img src = "images\hilife.png" style = "width: 2em; height: 2em;">
       </div>
       <div class = "col-sm-11">
         <h1 style = "margin-left:auto" class = "bold"> Hi Life </h1>
       </div>
     </div>
     <div class = "row">
-      <div class = "col-sm-1 borders">
-        <img src = "images\Red Concept Rendering.jpg" style = "width: 100%; height: 100%;">
+      <div class = "col-sm-1">
+        <img src = "images\Red Concept Rendering.jpg" style = "width: 2m; height: 2em;">
       </div>
       <div class = "col-sm-11">
-        <h1 style = "margin-left:auto" class = "bold"> Speaker Projects </h1>
+        <h1 style = "margin-left:auto" class = "bold"> Loudspeaker Design </h1>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "col-sm-1">
+        <img src = "images\Red Concept Rendering.jpg" style = "width: 2m; height: 2em;">
+      </div>
+      <div class = "col-sm-11">
+        <h1 style = "margin-left:auto" class = "bold"> Industrial Design </h1>
+      </div>
+    </div>
+    <div class = "row">
+      <div class = "col-sm-1">
+        <img src = "images\Red Concept Rendering.jpg" style = "width: 2m; height: 2em;">
+      </div>
+      <div class = "col-sm-11">
+        <h1 style = "margin-left:auto" class = "bold"> Graphic Design </h1>
       </div>
     </div>
   </div>
-
-  <h1>  Hi Life </h1>
 -->
 <script src = "jquery-2.1.3.min.js"></script>
 <script src = "bootstrap/js/bootstrap.min.js"></script>
