--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li class="active"><a href="https://www.linkedin.com/pub/ahren-alexander/65/766/737/en">LinkedIn <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Resume</a></li>
+          <!-- <li><a href="#">Resume</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
@@ -37,10 +37,10 @@
               <li><a href="#">Separated link</a></li>
               <li class="divider"></li>
               <li><a href="#">One more separated link</a></li>
-            </ul>
+            </ul> -->
           </li>
         </ul>
-        <form class="navbar-form navbar-left" role="search">
+        <!-- <form class="navbar-form navbar-left" role="search">
           <div class="form-group">
             <input type="text" class="form-control" placeholder="Search">
           </div>
@@ -58,7 +58,7 @@
               <li><a href="#">Separated link</a></li>
             </ul>
           </li>
-        </ul>
+        </ul> -->
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
@@ -68,21 +68,20 @@
     AHREN ALEXANDER  </div>
   <div id = "bluebar"> </div>
 
-  <p class = "huge" style = "letter-spacing: -1px; color: grey;"> "Eventually, Everything Connects"</p>
-  <p style = "font-style: italic; text-align:center;"> - lol Charles Eames </p>
+  <p class = "huge" style = "letter-spacing: -.5px; color: #BBBBBB; word-spacing: 6px; font-size:200%;"> The thrill of design lies in exploring and expanding the limits of the human imagination, ultimately bringing to life the amazing ideas found there.</p>
   <hr>
   <br>
-  <div class = "container">
+  <div class = "container center">
     <div class = "row">
       <div class = "col-sm-6">
-        <img src = 'images\vert.png' class = "img-circle center" style = "height:16em; width:16em;">
+        <img src = 'images\vert.png' class = "img-circle" style = "height:60%; width: 60%;">
         <h1> VERT II AUDIO </h1>
-        <p class = "bold center"> Director   and   Founder </p>
-        <p class = "serif center"> VERT || AUDIO is me actively pursuing my dreams.  VERT is an audio manufacturing company that specializes in producing low-profile speakers, also serving as a platform for independent artists to display their work. </p>
+        <p class = "bold center"> Founder, CEO, and Acoustics Specialist </p>
+        <p class = "serif center"> My newborn company is an audio manufacturing company that specializes in producing visually inspired loudspeakers, combining the math and science of acoustics with the aesthetic and user-centered principles of design.  I serve as the CEO and Acoustics Specialist. </p>
       </div>
 
         <div class = "col-sm-6">
-          <img src = 'images\frd.png' class = "img-circle center" style = "height:16em; width:16em;">
+          <img src = 'images\frd.png' class = "img-circle" style = "height:65%; width:65%;">
           <h1> FOR REAL DOUGH </h1>
           <p class = "bold center"> Head   of   Analytics   and   Design </p>
           <p class = "serif center"> For Real Dough specializes in eggless cookie dough that comes in a variety of exciting flavors.  I provide graphic design and marketing services. </p>
@@ -91,7 +90,7 @@
 
     <div class = row>
       <div class = "col-sm-12">
-        <img src = 'images\nu.png' class = "img-circle center" style = "height:16em; width:16em;">
+        <img src = 'images\nu.png' class = "img-circle" style = "height:25%; width:25%;">
         <h1> Northwestern University '16 </h1>
         <p class = "bold center"> Manufacturing and Design Engineering </p>
         <p class = "serif center"> Music Technology + Farley Center Certificate for Entrepreneurship</p>
@@ -100,42 +99,114 @@
     <hr>
     <div class = "row">
       <div class = "col-lg-12">
-          <h1 style = "text-align:center; padding: .5em;"> Projects </h1>
+          <h1 style = "text-align:center; padding: .5em;" class = "bold bigfont"> Design Work </h1>
         </div>
+        <hr>
     </div> <!-- ROW -->
 
     <div class = "row">
-      <div class = "col-sm-1">
-        <img src = "images\hilife.png" style = "width: 2em; height: 2em;">
-      </div>
-      <div class = "col-sm-11">
-        <h1 style = "margin-left:auto" class = "bold"> Hi Life </h1>
-      </div>
-    </div>
+      <img src = "images\Collection for Native Instruments\vert audio\vert logo iteration.png" style = "width: 100%; height: 100%;">
+    </div>  <!-- ROW -->
+
     <div class = "row">
-      <div class = "col-sm-1">
-        <img src = "images\Red Concept Rendering.jpg" style = "width: 2m; height: 2em;">
+      <div class = "col-sm-6">
+        <img src = "images\Red Concept Rendering.jpg" style = "width: 100%; height: 100%; padding-top: 10%;">
       </div>
-      <div class = "col-sm-11">
-        <h1 style = "margin-left:auto" class = "bold"> Loudspeaker Design </h1>
+      <div class = "col-sm-6">
+        <img src = "images\Collection for Native Instruments\vert audio\Prototypes.jpg" style = "width: 100%; height: 100%;">
       </div>
-    </div>
+    </div> <!-- ROW -->
+
     <div class = "row">
-      <div class = "col-sm-1">
-        <img src = "images\Red Concept Rendering.jpg" style = "width: 2m; height: 2em;">
+      <div class = "col-sm-6">
+        <img src = "images\Collection for Native Instruments\vert audio\VERT 3-piece.jpg" style = "width: 100%; height: 100%;">
       </div>
-      <div class = "col-sm-11">
-        <h1 style = "margin-left:auto" class = "bold"> Industrial Design </h1>
+      <div class = "col-sm-6">
+        <img src = "images\Collection for Native Instruments\vert audio\vert audio suspension prototype.jpg" style = "width: 100%; height: 100%;">
       </div>
-    </div>
+    </div> <!-- ROW -->
+
     <div class = "row">
-      <div class = "col-sm-1">
-        <img src = "images\Red Concept Rendering.jpg" style = "width: 2m; height: 2em;">
+        <h1 style = "margin-left:auto; padding: 10px;" class = "bold bigfont"> Book Covers </h1>
       </div>
-      <div class = "col-sm-11">
-        <h1 style = "margin-left:auto" class = "bold"> Graphic Design </h1>
+      <hr>
+    </div>  <!-- ROW -->
+
+    <div class = "row">
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Book Covers\Bauhaus Front Cover.jpg" style = "width: 95%; height: 95%;">
       </div>
-    </div>
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Book Covers\Organic Cover2.jpg" style = "width: 95%; height: 95%;">
+      </div>
+    </div> <!-- ROW -->
+
+    <div class = "row">
+        <h1 style = "margin-left:auto; padding: 10px;" class = "bold bigfont"> For Real Dough </h1>
+      </div>
+      <hr>
+    </div>  <!-- ROW -->
+
+    <div class = "row">
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Cookie Dough Lids\CPSF.jpg" style = "width: 95%; height: 95%;">
+      </div>
+      <!-- <div class = "col-sm-4" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Cookie Dough Lids\SDCC.jpg" style = "width: 95%; height: 95%;">
+      </div> -->
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Cookie Dough Lids\SSNC.jpg" style = "width: 95%; height: 95%;">
+      </div>
+    </div> <!-- ROW -->
+
+    <div class = "row">
+        <h1 style = "margin-left:auto; padding: 10px;" class = "bold bigfont"> Beats Record Player </h1>
+      </div>
+      <hr>
+    </div>  <!-- ROW -->
+
+    <div class = "row">
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Beats Record Player\Beats Blue Front.jpg" style = "width: 95%; height: 95%;">
+      </div>
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Beats Record Player\Beats Blue Perspective.jpg" style = "width: 95%; height: 95%;">
+      </div>
+    </div> <!-- ROW -->
+
+    <div class = "row">
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Beats Record Player\Beats Compilation png.jpg" style = "width: 95%; height: 95%;">
+      </div>
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Beats Record Player\Beats Red FRONT.jpg" style = "width: 95%; height: 95%;">
+      </div>
+    </div> <!-- ROW -->
+
+    <div class = "row">
+        <h1 style = "margin-left:auto; padding: 10px;" class = "bold bigfont"> Other Notables </h1>
+      </div>
+      <hr>
+    </div>  <!-- ROW -->
+
+    <div class = "row">
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\NUhackathon.png" style = "width: 95%; height: 95%;">
+      </div>
+      <div class = "col-sm-6" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Personal Insignia.jpg" style = "width: 45%; height: 45%;">
+      </div>
+    </div> <!-- ROW -->
+
+    <div class = "row">
+      <div class = "col-sm-7" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Synthalize Conceptual Interface.png" style = "width: 90%; height: 90%;">
+      </div>
+      <div class = "col-sm-5" style = "padding: 10px;">
+        <img src = "images\Collection for Native Instruments\Viewtiful Bomberman Crossover Work.png" style = "width: 95%; height: 95%;">
+      </div>
+    </div> <!-- ROW -->
+
   </div>
 -->
 <script src = "jquery-2.1.3.min.js"></script>
