Minor Changes to FRD descriptions

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
         <img src = 'images\vert.png' class = "img-circle" style = "height:60%; width: 60%;">
         <h1> VERT II AUDIO </h1>
         <p class = "bold center"> Founder, CEO, and Acoustics Specialist </p>
-        <p class = "serif center"> My newborn company is an audio manufacturing company that specializes in producing visually inspired loudspeakers, combining the math and science of acoustics with the aesthetic and user-centered principles of design.  I serve as the CEO and Acoustics Specialist. </p>
+        <p class = "serif center"> My newborn company is an audio manufacturing company that specializes in producing visually inspired loudspeakers, combining the math and science of acoustics with the aesthetic and user-centered principles of design. </p>
       </div>
 
         <div class = "col-sm-6">
           <img src = 'images\frd.png' class = "img-circle" style = "height:65%; width:65%;">
           <h1> FOR REAL DOUGH </h1>
           <p class = "bold center"> Head   of   Analytics   and   Design </p>
-          <p class = "serif center"> For Real Dough specializes in eggless cookie dough that comes in a variety of exciting flavors.  I provide graphic design and marketing services. </p>
+          <p class = "serif center"> For Real Dough specializes in providing delicious and unique cookie dough to students at Northwestern University.  I primarily provide graphic design and marketing services for the company. </p>
         </div>
     </div> <!-- ROW -->
 
