--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
     </div> <!-- ROW -->
 
     <div class = "row">
-      <div class = "col-sm-6">
+      <!-- <div class = "col-sm-6">
         <img src = "images\Collection for Native Instruments\vert audio\VERT 3-piece.jpg" style = "width: 100%; height: 100%;">
-      </div>
-      <div class = "col-sm-6">
-        <img src = "images\Collection for Native Instruments\vert audio\vert audio suspension prototype.jpg" style = "width: 100%; height: 100%;">
+      </div> -->
+      <div class = "col-sm-12">
+        <img src = "images\Collection for Native Instruments\vert audio\vert audio suspension prototype.jpg" style = "width: 50%; height: 50%;">
       </div>
     </div> <!-- ROW -->
 
